tests/errors/logical_nonbool.lx
@module "main"

pub const main -> fn () int {
    let x: bool = 1 && 2;
    return 0;
}
